@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -36,18 +36,15 @@ import javax.xml.stream.XMLOutputFactory;
 import jaxp.library.JAXPDataProvider;
 
 import org.testng.annotations.DataProvider;
-import org.testng.annotations.Listeners;
 import org.testng.annotations.Test;
 
 /*
  * @test
  * @bug 8169778
  * @library /javax/xml/jaxp/libs
- * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow javax.xml.stream.ptests.XMLOutputFactoryNewInstanceTest
  * @run testng/othervm javax.xml.stream.ptests.XMLOutputFactoryNewInstanceTest
  * @summary Tests for XMLOutputFactory.newFactory(factoryId , classLoader)
  */
-@Listeners({jaxp.library.BasePolicy.class})
 public class XMLOutputFactoryNewInstanceTest {
 
     private static final String DEFAULT_IMPL_CLASS =
