@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2011, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2011, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,14 +25,14 @@
  * @test
  * @bug 7092744
  * @summary Tests for ambiguous methods
- * @run main/othervm -Djava.security.manager=allow Test7092744
+ * @run main/othervm Test7092744
  * @author Sergey Malenkov
  */
 
 public class Test7092744 extends AbstractTest {
 
     public static void main(String[] args) {
-        new Test7092744().test(true);
+        new Test7092744().test();
     }
 
     protected Object getObject() {
