@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -31,7 +31,7 @@
  *        jdk.test.lib.util.ForceGC
  *        jdk.test.lib.util.JarUtils
  * @build ClassForName ClassForNameLeak
- * @run main/othervm/policy=test.policy -Djava.security.manager ClassForNameLeak
+ * @run main/othervm ClassForNameLeak
  */
 
 import java.io.IOException;
