@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -49,31 +49,16 @@ public class TestDumpOnExit {
     public static void main(String[] args) throws Exception {
         Path dumpPath = Paths.get(".", "dumped.jfr");
 
-        // Test without security manager and a file name relative to current directory
+        // Test with file name relative to current directory
         testDumponExit(() -> dumpPath,
                 "-Xlog:jfr=trace",
                 "-XX:StartFlightRecording:filename=./dumped.jfr,dumponexit=true,settings=profile",
                 "jdk.jfr.startupargs.TestDumpOnExit$TestMain"
         );
-        // Test a memory recording without a security manager
+        // Test a memory recording
         testDumponExit(() -> findJFRFileInCurrentDirectory(),
                 "-Xlog:jfr=trace",
                 "-XX:StartFlightRecording:dumponexit=true,disk=false",
-                "jdk.jfr.startupargs.TestDumpOnExit$TestMain"
-        );
-
-        // Test with security manager and a file name relative to current directory
-        testDumponExit(() -> dumpPath,
-                "-Xlog:jfr=trace",
-                "-XX:StartFlightRecording:filename=./dumped.jfr,dumponexit=true,settings=profile",
-                "-Djava.security.manager",
-                "jdk.jfr.startupargs.TestDumpOnExit$TestMain"
-        );
-        // Test with security manager but without a name
-        testDumponExit(() -> findJFRFileInCurrentDirectory(),
-                "-Xlog:jfr=trace",
-                "-XX:StartFlightRecording:dumponexit=true,settings=profile",
-                "-Djava.security.manager",
                 "jdk.jfr.startupargs.TestDumpOnExit$TestMain"
         );
     }
